syntax = "proto3";
package mycel.registry;

option go_package = "github.com/mycel-domain/mycel/x/registry/types";

enum DomainRole {
  OWNER = 0;
  EDITOR = 1;
}