syntax = "proto3";
package mycel.registry;

option go_package = "github.com/mycel-domain/mycel/x/registry/types";

message TopLevelDomain {
  string name = 1;
  uint64 expirationDate = 2;
}
